--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,45 +1,25 @@
 name: Deploy React.js to CentOS VM
 
- 
-
 on:
   push:
     branches:
       - main
 
- 
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
- 
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
- 
+        uses: actions/checkout@v2 
 
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 14
-
- 
-
-      - name: npm install, build, and test
-        run: |
-          npm install js-yaml
-          npm run build --if-present
-          npm run test --if-present
-
- 
+          node-version: 14 
 
       - name: Install SSH client
         run: sudo apt-get install openssh-client -y
-
- 
 
       - name: Copy files to CentOS VM
         uses: appleboy/scp-action@master
@@ -47,5 +27,5 @@ jobs:
           host: 192.168.56.108
           username: tamilarasand
           password: Tamil@002
-          source: build/
+          source: Frontend-Pro/
           target: /var/www/html/
